make todos more forceful, since they’re about currently-wrong things

--- a/quillen.tex
+++ b/quillen.tex
@@ -555,8 +555,6 @@ Suppose that $V$ is a rank $n$ vector bundle over $X$, and let $f\co Y \to X$ be
 
 \section{Power operations for complex bordism}\label{QuillenPowerOpnsSection}
 
-\todo{Is this the best name?}
-
 Our eventual goal, like in \Cref{UnorientedBordismChapter}, is to give an algebro-geometric description of $MU_*(*)$ and of the cooperations $MU_* MU$.  It is possible to approach this the same way as in \Cref{PiStarMOSection}, using the Adams spectral sequence~(\cite[Theorem 2]{QuillenAdamsSS}, \cite[Lecture 9]{LurieChromaticCourseNotes}).  However, $MU_*(*)$ is an integral algebra and so we cannot make do with working out the mod--$2$ Adams spectral sequence alone---we would at least have to work out the mod--$p$ Adams spectral sequence for every $p$.  At odd primes $p$, there is the following unfortunate theorem:
 \begin{theorem}
 There is an isomorphism
@@ -580,14 +578,14 @@ Given a spectrum $E$, its $n$--fold smash power forms a \textit{$\Sigma_n$--spec
 \end{tikzcd}
 \end{center}
 A ring spectrum $E$ equipped with a suite of factorizations $\mu_n$ satisfying compatibility laws embodying term collection (i.e., $x^a \cdot x^b = x^{a+b}$) and iterated exponentiation (i.e., $(x^a)^b = x^{ab}$) is called an \textit{$H_\infty$--ring spectrum}~\cite[Definition I.3.1]{BMMS}.
-\todo{This is pretty much the definition of an $H_\infty$ ring spectrum, but this is not enough to extract power operations on positive-degree classes.  There, you want compatible systems of maps like $(\Susp^j E)^{\sm n}_{h\Sigma_n} \to \Susp^{nj} E$.  In general, you get such systems only for all $j$ which are divisible by some fixed $d$, and the resulting mess is called an $H_\infty^d$--structure.  For example, $KU$ has an $H_\infty^2$--structure and $KO$ has an $H_\infty^8$--structure.  My suspicion with Nat is that power operation maps come from applying the power operation functor to the identity class in $[E, E]$, and that the $H_\infty^d$--structures on these two spectra come from applying the power operation functor to the autoequivalence supplied by the relevant Bott element.  Meanwhile, Jeremy keeps telling us that this really has to do with representation spheres: the $n$--fold smash power of $S^j$ ought to be called $S^{j\rho}$ for $\rho$ the permutation representation of $\Sigma_n$.  Being able to identify $S^{j\rho}_{h\Sigma_n}$ with $S^{jn}$ is somehow the main input to an $H_\infty^n$--structure.}
+\todo[inline]{This is pretty much the definition of an $H_\infty$ ring spectrum, but this is not enough to extract power operations on positive-degree classes.  There, you want compatible systems of maps like $(\Susp^j E)^{\sm n}_{h\Sigma_n} \to \Susp^{nj} E$.  In general, you get such systems only for all $j$ which are divisible by some fixed $d$, and the resulting mess is called an $H_\infty^d$--structure.  For example, $KU$ has an $H_\infty^2$--structure and $KO$ has an $H_\infty^8$--structure.  My suspicion with Nat is that power operation maps come from applying the power operation functor to the identity class in $[E, E]$, and that the $H_\infty^d$--structures on these two spectra come from applying the power operation functor to the autoequivalence supplied by the relevant Bott element.  Meanwhile, Jeremy keeps telling us that this really has to do with representation spheres: the $n$--fold smash power of $S^j$ ought to be called $S^{j\rho}$ for $\rho$ the permutation representation of $\Sigma_n$.  Being able to identify $S^{j\rho}_{h\Sigma_n}$ with $S^{jn}$ is somehow the main input to an $H_\infty^n$--structure.  Justin says that this is definitely the right way to think about these things and that he has a result with Niles that $H_\infty^n$ equals $H_\infty$ + orientations for $n$--dimensional representation spheres.}
 The composite \[P^{\Sigma_n}_{\mathrm{ext}}f\co (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{f^{\sm n}_{h\Sigma_n}} E^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} E\] is called the \textit{external (total) $\Sigma_n$--power operation} applied to $f$, and the restriction to the diagonal subspace \[P^{\Sigma_n}f \co \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \simeq (\Susp^\infty_+ X)_{h\Sigma_n} \xrightarrow{\Delta_{h\Sigma_n}} (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{P^{\Sigma_n}_{\mathrm{ext}}f} E\] is called the \textit{(internal total) $\Sigma_n$--power operation} applied to $f$.  We can consider it as a cohomology class lying in \[P^{\Sigma_n} f \in E^0(X \times B\Sigma_n).\]
 
 \begin{remark}[{\cite[Definition IV.7.1]{BMMS}}]\label{RestrictingSteenrodOpToBasepoint}
-The optional adjective ``total'' is a reference to the following variant of this construction.  By choosing a class in $MU_* B\Sigma_n$, thought of as a functional on $MU^* B\Sigma_n$, the Kronecker pairing of the total power operation with this fixed class gives rise to a truly internal cohomology operation on $MU^* X$ as in the following composite:
+The optional adjective ``total'' is a reference to the following variant of this construction.  By choosing a class in $E_* B\Sigma_n$, thought of as a functional on $E^* B\Sigma_n$, the Kronecker pairing of the total power operation with this fixed class gives rise to a truly internal cohomology operation on $E^* X$ as in the following composite:
 \begin{center}
 \begin{tikzcd}
-\Susp^\infty_+ X \sm \S \arrow["1 \sm \sigma"]{r} & \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \sm MU \arrow["P^{\Sigma_n} f \sm 1"]{r} & MU \sm MU \arrow["\mu"]{r} & MU.
+\Susp^\infty_+ X \sm \S \arrow["1 \sm \sigma"]{r} & \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \sm E \arrow["P^{\Sigma_n} f \sm 1"]{r} & E \sm E \arrow["\mu"]{r} & E.
 \end{tikzcd}
 \end{center}
 For instance, restriction to the basepoint in $B\Sigma_n$ gives the $n$--fold cup product $f^{n}$.
@@ -640,8 +638,23 @@ Note that $P^G$ can be defined by means of restriction: $P^G = \Res^{\Sigma_n}_G
 
 Since the only operations we understand so far are stable operations, which are in particular additive, we are moved to find a target for the power operation $P^G$ which kills the ideal generated by the proper transfers (i.e., the intermediate terms in the binomial formula) yet which remains computable.
 
+\todo[inline]{Justin wrote me this helpful thing.
+
+In 2.4.9 you indicate that you don't follow the argument for the additivity of the Tate power operation. I don't think that argument can work unless your group is $C_p$:
+
+The Tate construction you are considering is the composite of Borel completion $(E\in Sp \mapsto \underline{E}\in Sp_G$ (where $\underline{E}^H=E^{hH}$), a smashing localization that kills free orbits, and then taking fixed points. Since transfers $Tr_H^G$ are defined using a map that factors through a $G$--spectrum of the form $G/H_+\wedge (something)$ the Tate construction you have considered will kill classes of the form $Tr_e^G$. Unless the group is $C_p$, you are going to have other transferred classes that you need to kill. 
+
+Here is a construction of the generalized Tate spectrum that will have the desired property: Consider the standard permutation representation of $\Sigma_n$ acting on a set $S$ of $n$-elements. Define a family of subgroups $F$ of $\Sigma_n$ as follows: take any non-trivial partition of $S$ into disjoint subsets (so we exclude the partition with one subset $[S]$) and then consider the subgroup of $\Sigma_n$ which leaves this partition invariant (e.g. $\Sigma_i \times \Sigma_{n-i}$). These are the the subgroups which are the origins of our bad transfers. Of course, a transfer from a smaller subgroup such as $C_i\times C_{n-i}$ will factor through these other transfers, so we will define $F$ to be the smallest collection of subgroups containing the above bad groups and is closed under taking subgroups (this makes it into a Family). 
+
+Let $O(\Sigma_n)_F\subseteq O(\Sigma_n)$ be the full subcategory of the orbit category spanned by the orbits whose isotropy is in $F$. 
+There is a generalized induction/norm map:
+$\colim_{\Sigma_n/H\in O(\Sigma_n)_F} E^{hH}--> E^{h\Sigma_n}$ whose cofiber we will denote $E^{t_F \Sigma_n}$  (and yes, I mean homotopy fixed points in the source)
+this will be $E_\infty$ if $E$ and the map $E^{h\Sigma_n}-->E^{t_F \Sigma_n}$ will be a map of $E_\infty$ rings. Moreover we have done the minimal localization to the Borel completion of $E$ which kills these transfers. 
+
+Changing your map to land in this Tate construction will give you an additive map. The straightforward augmentation of this construction to the $C_p$-case will yield the same map as the one you have considered.}
+
 \begin{definition}[{\cite[Construction 6.1.6.4, Definition 6.1.6.24]{LurieHA}}]
-\todo{This is confusing. Is it even right? Hm.}
+\todo{This is confusing. Is it even right? Hm.  ---  Justin writes: The norm map factors as $F_{hH} \to F^H \to F^{hH}$.  Actually the equivariant homotopy theory is pretty rough in this section.}
 Again let $F$ be an $H$--spectrum, and define its \textit{homotopy fixed points} to be the homotopy limit spectrum $F^{hH}$.  The norm map $F_{hH} \to F$ witnesses the trivial $H$--spectrum $F_{hH}$ as a constant cone over the $H$--spectrum $F$, and hence gives a natural factorization $F_{hH} \to F^{hH} \to F$ of the norm.  The cofiber of this first map is denoted $F^{tH}$ and is called the \textit{Tate spectrum} of $F$.  This gives rise to a notion of Tate power operation via
 \begin{center}
 \begin{tikzcd}[row sep=0.2em]
