--- a/powerops.tex
+++ b/powerops.tex
@@ -270,7 +270,7 @@ The schemes $\Sub_j \G$ and $\Level(A, \G)$ are known to possess many very pleas
 
 
 
-\subsection*{Isogenies and the Lubin--Tate moduli}
+\subsection*{Isogenies and the Lubin--Tate moduli}\label{IsogeniesSection}
 
 In this subsection, we seek a comparison of the natural $E_\infty$ context and the unstable context considered in \Cref{UnstableContextsSection}.  Our model for the unstable context in \Cref{UnstableAlgebraicModelSection} focuses on the effect of unstable operations on the cohomology of $\CP^\infty$, as summarized in the following result:
 
