kill todos in 2.3

--- a/quillen.tex
+++ b/quillen.tex
@@ -373,8 +373,7 @@ The first claim is justified by \Cref{ThomConstructionIsASliceFunctor}, the seco
 We use these properties to work the following Example, which connects Thom sheaves with the major players from \Cref{FormalVarietiesLecture}.
 
 \begin{example}[{\cite[Section 8]{AHSHinfty}}]\label{Pi2AndInvariantDiffls}
-\todo{Various people have been uncomfortable about whether the grading matters here, whether $E$ is periodified, \ldots .  \textbf{Actually, something is almost definitely wrong:} the functor $T$ is defined to give the reduced Thom spectrum.  Shit.}
-Take $\L$ to be the canonical line bundle over $\CP^\infty$.  Using the same mode of argument as in \Cref{RPnThomExample}, the zero-section \[\Susp^\infty \CP^\infty \xrightarrow{\simeq} T(\L)\] gives an identification \[E^0 \CP^\infty \supseteq \widetilde E^0 \CP^\infty \xleftarrow{\simeq} E^0 T(\L)\] of $E^0 T(\L)$ with the augmentation ideal in $E^0 \CP^\infty$.  At the level of Thom sheaves, this gives an isomorphism \[\sheaf I(0) \xleftarrow{\simeq} \ThomSheaf{\L}\] of $\ThomSheaf{\L}$ with the sheaf of functions vanishing at the origin of $\CP^\infty_E$.  Pulling $\L$ back along \[0\co * \to \CP^\infty\] gives a line bundle over the one-point space, which on Thom spectra gives the inclusion \[\Susp^\infty \CP^1 \to \Susp^\infty \CP^\infty.\]  Stringing many results together, we can now calculate:
+Take $\L$ to be the canonical line bundle over $\CP^\infty$.  Using the same mode of argument as in \Cref{RPnThomExample}, the zero-section \[\Susp^\infty \CP^\infty \xrightarrow{\simeq} T_2(\L)\] gives an identification \[E^0 \CP^\infty \supseteq \widetilde E^0 \CP^\infty \xleftarrow{\simeq} E^0 T_2(\L)\] of $E^0 T_2(\L)$ with the augmentation ideal in $E^0 \CP^\infty$.  At the level of Thom sheaves, this gives an isomorphism \[\sheaf I(0) \xleftarrow{\simeq} \ThomSheaf{\L}\] of $\ThomSheaf{\L}$ with the sheaf of functions vanishing at the origin of $\CP^\infty_E$.  Pulling $\L$ back along \[0\co * \to \CP^\infty\] gives a line bundle over the one-point space, which on Thom spectra gives the inclusion \[\Susp^\infty \CP^1 \to \Susp^\infty \CP^\infty.\]  Stringing many results together, we can now calculate:%
 \footnote{The identification $0^* \sheaf I(0) = \sheaf I(0) / \sheaf I(0) \cdot \sheaf I(0)$ deserves further explanation.  The functor $0^*$ is right-exact, so sends the short exact sequence \[0 \to \sheaf I(0)^2 \to \sheaf I(0) \to \sheaf I(0) / \sheaf I(0)^2 \to 0\] to a right-exact sequence, and we need only check that the map $0^* \sheaf I(0)^2 \to 0^* \sheaf I(0)$ is zero.  This is the statement that a function vanishing to second order also has vanishing first derivative.}
 \begin{align*}
 \widetilde{\pi_2 E} & \cong \widetilde{E^0 \CP^1} & \text{($S^2 \simeq \CP^1$)} \\
@@ -410,7 +409,7 @@ X \arrow[equal]{rr} \arrow[bend left, densely dotted]{u}{\zeta} & & X \arrow[equ
 \end{center}
 We read this diagram as follows: on the far left, there's the vector bundle we began with, as well as its zero-section $\zeta$.  Deleting the zero-section gives the second bundle, a $\C^n \setminus \{0\}$--bundle over $X$.  Its quotient by the scaling $\C^\times$--action gives the third bundle, a $\CP^{n-1}$--bundle over $X$.  Additionally, the quotient map $\C^n \setminus \{0\} \to \CP^{n-1}$ is itself a $\C^\times$--bundle, and this induces the structure of a $\C^\times$--bundle on the quotient map $V \setminus \zeta \to \P(V)$.  Thinking of these as complex line bundles, they are classified by a map to $\CP^\infty$, which can itself be thought of as the last vertical fibration, fibering over a point.
 
-Note that the map between these two last fibers is surjective on $E$--cohomology.  It follows that the Serre spectral sequence\todo{Why is this fibration simple?} for the third vertical fibration is degenerate, since all the classes in the fiber must survive.\footnote{This is called the Leray--Hirsch theorem.}  We thus conclude that $E^* \P(V)$ is a free $E^*(X)$--module on the classes $\{1, t, t^2, \ldots, t^{n-1}\}$ spanning $E^* \CP^{n-1}$, where $t$ encodes the chosen complex-orientation of $E$.  To understand the ring structure, we need only compute $t^{n-1} \cdot t$, which must be able to be written in terms of the classes which are lower in $t$--degree: \[t^n = c_1(V) t^{n-1} - c_2(V) t^{n-2} + \cdots + (-1)^{n-1} c_n(V)\] for some classes $c_j(V) \in E^* X$.  The main claim follows.
+Note that the map between these two last fibers is surjective on $E$--cohomology.  It follows that the Serre spectral sequence for the third vertical fibration is degenerate, since all the classes in the fiber must survive.\footnote{This is called the Leray--Hirsch theorem.}  We thus conclude that $E^* \P(V)$ is a free $E^*(X)$--module on the classes $\{1, t, t^2, \ldots, t^{n-1}\}$ spanning $E^* \CP^{n-1}$, where $t$ encodes the chosen complex-orientation of $E$.  To understand the ring structure, we need only compute $t^{n-1} \cdot t$, which must be able to be written in terms of the classes which are lower in $t$--degree: \[t^n = c_1(V) t^{n-1} - c_2(V) t^{n-2} + \cdots + (-1)^{n-1} c_n(V)\] for some classes $c_j(V) \in E^* X$.  The main claim follows.
 \end{proof}
 
 In coordinate-free language, we have the following Corollary:
@@ -535,9 +534,8 @@ Let $\zeta: X_E \to X_E \times \CP^\infty_E$ denote the pointing of the formal c
 In terms of a complex-oriented $E$ and \Cref{CohomologyOfProjectivization}, the effect of pulling back along the zero section is to set $t = 0$, which collapses the Chern polynomial to just the top class $c_n(V)$.  This element, called \textit{the Euler class of $V$}, provides the $E^* X$--module generator of $E^* T(V)$---or, equivalently, the trivializing section of $\ThomSheaf{V}$.
 \end{proof}
 
-\begin{theorem}[{cf.\ \Cref{BUTriumvirate}}]\label{ComplexOrientationsInTermsOfTrivs}
-\todo{Do you have the right spectrum here: $MU$ versus $MUP$?}
-A trivialization $t\co \ThomSheaf{\L - 1} \cong \sheaf O_{\CP^\infty_E}$ of the Thom sheaf associated to the canonical bundle induces a ring map $MU \to E$.
+\begin{theorem}[{cf.\ \Cref{BUZTriumvirate}}]\label{ComplexOrientationsInTermsOfTrivs}
+A trivialization $t\co \ThomSheaf{\L} \cong \sheaf O_{\CP^\infty_E}$ of the Thom sheaf associated to the canonical bundle induces a ring map $MUP \to E$.
 \end{theorem}
 \begin{proof}
 Suppose that $V$ is a rank $n$ vector bundle over $X$, and let $f\co Y \to X$ be the space guaranteed by the splitting principle to provide an isomorphism $f^* V \cong \bigoplus_{j=1}^n \L_j$.  The chosen trivialization $t$ then pulls back to give a trivialization of $\sheaf I(\P(f^* V)_E)$, and by finite flatness this descends to also give a trivialization of $\sheaf I(\P(V)_E)$.  Pulling back along the zero section gives a trivialization of $\ThomSheaf{V}$.  Then note that the system of trivializations produced this way is multiplicative, as a consequence of $\P(V_1 \oplus V_2)_E \cong \P(V_1)_E \sqcup \P(V_2)_E$.  In the universal examples, this gives a sequence of compatible maps $MU(n) \to E$ which assemble on the colimit $n \to \infty$ to give the desired map of ring spectra.
