--- a/finite.tex
+++ b/finite.tex
@@ -871,6 +871,7 @@ We also see that our analysis fails wildly for the case $\Gamma = \G_a$.  The di
 
 Having accomplished all our major goals, we close our algebraic analysis of $\moduli{fg}$ with \Cref{MfgPicture}, a diagram summarizing our results.
 \todo[color=red]{Complete picture}
+\todo{Hood suggests including two pictures, one labeled with algebraic names and one labeled with topological names. This is a good idea.}
 
 \begin{sidewaysfigure}
 \centering
