add an epigraph

--- a/preamble.tex
+++ b/preamble.tex
@@ -94,6 +94,10 @@
 \usepackage{booktabs}
 
 
+\usepackage{epigraph}
+\setlength\epigraphrule{0pt}
+
+
 %%% DONE WITH PACKAGES
 
 % \setlength{\marginparwidth}{1in-\marginparsep} % fullpage sets margins to 1in
