--- a/unknowns.tex
+++ b/unknowns.tex
@@ -70,6 +70,10 @@ Nilpotency and vanishing curves in the ($MU$--)Adams spectral sequence.  The \em
 
 Additive degeneration and $kO \ne kU^{hC_2}$.
 
+Salchian $L$--functions.
+
+Agnes and everyone else on the chromatic splitting conjecture.
+
 
 
 
