--- a/unknowns.tex
+++ b/unknowns.tex
@@ -70,7 +70,7 @@ Nilpotency and vanishing curves in the ($MU$--)Adams spectral sequence.  The \em
 
 Additive degeneration and $kO \ne kU^{hC_2}$.
 
-Salchian $L$--functions.
+Salchian $L$--functions.  Yanovski--Schlank's homotopy cardinalities result.
 
 Agnes and everyone else on the chromatic splitting conjecture.
 
