clean up some of 2.4-6

--- a/powerops.tex
+++ b/powerops.tex
@@ -147,7 +147,7 @@ Now, apply the genuine $G$-equivariant Chern character to the $K_G$ factor to ge
 
 
 
-\section{Orientations and power operations}\label{PowerOpnsChapter}
+\section{Orientations and power operations}\label{PowerOpnsSection}
 
 \begin{center}
 \textbf{\Large This is completely under construction.}
