mention mike’s analytic functions

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -70,7 +70,9 @@ Nilpotency and vanishing curves in the ($MU$--)Adams spectral sequence.  The \em
 
 Additive degeneration and $kO \ne kU^{hC_2}$.
 
-Hopkins's program for $p$--adic interpolation and Salchian $L$--functions.  Yanovski--Schlank's homotopy cardinalities result.
+Hopkins's program for $p$--adic interpolation and Salchian $L$--functions.
+
+Hopkins's analytic Weierstra\ss{} products in the Bockstein spectral sequence.
 
 \begin{remark}[Yanovski--Schlank]
 Set $S_{\mathrm{small}}$ to be the category generated under finite colimits (including actions by finite groups, say) by $\pi$--finite spaces.  A \textit{generalized homotopy cardinality function} is a function $\chi\co \CatOf S_{\mathrm{small}} \to \Q$ satisfying
